After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 624066 - Shut up some compiler warnings
Shut up some compiler warnings
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2010-07-10 20:50 UTC by Florian Müllner
Modified: 2010-07-12 08:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Shut up some compiler warnings (1.76 KB, patch)
2010-07-10 20:50 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2010-07-10 20:50:29 UTC
Some compiler warnings popped up while writing the patch in bug 624065 - sorry for dumping to bgo, feel free to close WONTFIX if not appropriate.
Comment 1 Florian Müllner 2010-07-10 20:50:32 UTC
Created attachment 165645 [details] [review]
Shut up some compiler warnings

Remove unused variables, make sure variables are properly initialized.
Comment 2 Tomeu Vizoso 2010-07-12 08:42:32 UTC
Thanks!

Attachment 165645 [details] pushed as e500adc - Shut up some compiler warnings