Shut up some compiler warnings

Remove unused variables, make sure variables are properly initialized.

https://bugzilla.gnome.org/show_bug.cgi?id=624066